--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,12 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    cucumberRuntime {
+        extendsFrom testImplementation
+    }
+}
+
 dependencies {
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
@@ -24,6 +30,12 @@ dependencies {
     implementation 'com.google.guava:guava:30.1.1-jre'
     testImplementation "org.mockito:mockito-core:4.4.0"
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.4.0'
+    // Cucumber
+    testImplementation 'io.cucumber:cucumber-java:7.3.4'
+    testImplementation 'io.cucumber:cucumber-junit:7.3.4'
+    testImplementation group: 'de.monochromata.cucumber', name: 'reporting-plugin', version: '4.0.102'
+    //Selenium
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.1.4'
 }
 
 application {
@@ -34,4 +46,18 @@ application {
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+
+task cucumber() {
+    dependsOn assemble, testClasses
+    doLast {
+        javaexec {
+            main = "io.cucumber.core.cli.Main"
+            classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
+            args = ['--plugin', 'pretty',
+                    '--plugin', 'de.monochromata.cucumber.report.PrettyReports:target/cucumber',
+                    '--glue', 'A4.G2', // package of the step definitions (java files)
+                    'src/test/resources/features'] // where the features file are located (feature files)
+        }
+    }
 }
