--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ task cucumber() {
             classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
             args = ['--plugin', 'pretty',
                     '--plugin', 'de.monochromata.cucumber.report.PrettyReports:target/cucumber',
-                    '--glue', 'A4.G2', // package of the step definitions (java files)
+                    '--glue', 'A4.G2.Stepdefs', // package of the step definitions (java files)
                     'src/test/resources/features'] // where the features file are located (feature files)
         }
     }
