--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,19 +16,24 @@ on:
 permissions:
   contents: read
 
+env:
+  headless: true
+
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest # Using linux machine
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 16
-      uses: actions/setup-java@v3
-      with:
-        java-version: '16'
-        distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-      with:
-        arguments: build
+      - uses: actions/checkout@v3 # Checkout the code
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: Install Google Chrome # Using shell script to install Google Chrome
+        run: |
+          chmod +x ./scripts/chrome.sh
+           ./scripts/chrome.sh
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew # give permission to Gradle to run the commands
+      - name: Build with Gradle
+        run: ./gradlew test cucumber
