--- a/.gitignore
+++ b/.gitignore
@@ -710,3 +710,4 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,eclipse,visualstudio,gradle,java,git,windows,macos,linux
+.idea/misc.xml
